feat: add orval \w axios instance & fix api schemas
