# apps/task-api/internal/task/dto.go
@@ -4,39 +4,34 @@ import (
 	"errors"
 	"time"
 
-	"github.com/codingbart/todoapp/task-api/internal/response"
 	"github.com/google/uuid"
 )
 
-type TaskListResponse = response.Response[[]TaskResponse]
-type TaskSingleResponse = response.Response[TaskResponse]
-type DashboardSingleResponse = response.Response[DashboardResponse]
-
 type CreateTaskRequest struct {
-	Title       string  `json:"title"`
+	Title       string  `json:"title"                 validate:"required"`
 	Description *string `json:"description,omitempty"`
-	Status      string  `json:"status"`
-	Priority    string  `json:"priority"`
+	Status      string  `json:"status"                validate:"required"`
+	Priority    string  `json:"priority"              validate:"required"`
 	DueDate     *string `json:"due_date,omitempty"`
 }
 
 type UpdateTaskRequest struct {
-	Title       string  `json:"title"`
+	Title       string  `json:"title"                 validate:"required"`
 	Description *string `json:"description,omitempty"`
-	Status      string  `json:"status"`
-	Priority    string  `json:"priority"`
+	Status      string  `json:"status"                validate:"required"`
+	Priority    string  `json:"priority"              validate:"required"`
 	DueDate     *string `json:"due_date,omitempty"`
 }
 
 type TaskResponse struct {
-	ID          uuid.UUID  `json:"id"`
-	Title       string     `json:"title"`
+	ID          uuid.UUID  `json:"id"                    validate:"required"`
+	Title       string     `json:"title"                 validate:"required"`
 	Description *string    `json:"description,omitempty"`
-	Status      string     `json:"status"`
-	Priority    string     `json:"priority"`
+	Status      string     `json:"status"                validate:"required"`
+	Priority    string     `json:"priority"              validate:"required"`
 	DueDate     *time.Time `json:"due_date,omitempty"`
-	CreatedAt   time.Time  `json:"created_at"`
-	UpdatedAt   time.Time  `json:"updated_at"`
+	CreatedAt   time.Time  `json:"created_at"            validate:"required"`
+	UpdatedAt   time.Time  `json:"updated_at"            validate:"required"`
 }
 
 type TaskFilters struct {
@@ -45,10 +40,10 @@ type TaskFilters struct {
 }
 
 type DashboardResponse struct {
-	Todo       int64 `json:"todo"`
-	InProgress int64 `json:"in_progress"`
-	Done       int64 `json:"done"`
-	Total      int64 `json:"total"`
+	Todo       int64 `json:"todo"        validate:"required"`
+	InProgress int64 `json:"in_progress" validate:"required"`
+	Done       int64 `json:"done"        validate:"required"`
+	Total      int64 `json:"total"       validate:"required"`
 }
 
 var (
