# apps/task-frontend/src/types/task.ts
@@ -1,5 +1,8 @@
-export type TaskStatus = 'TODO' | 'IN_PROGRESS' | 'DONE';
-export type TaskPriority = 'LOW' | 'MEDIUM' | 'HIGH';
+import type dayjs from 'dayjs';
+
+export type TaskStatus = 'todo' | 'in_progress' | 'done';
+
+export type TaskPriority = 'low' | 'medium' | 'high';
 
 export type Task = {
     id: string;
@@ -7,6 +10,6 @@ export type Task = {
     description: string;
     status: TaskStatus;
     priority: TaskPriority;
-    dueDate: string;
-    createdAt: string;
+    dueDate: dayjs.Dayjs;
+    createdAt: dayjs.Dayjs;
 };
